# algorithm_rs

./: Cargo.toml  README.md
src/: base64.rs  cli.rs  cli.yml  main.rs  n_triangle.rs  system.rs
src/base64/: encode.rs  table.rs
src/n_triangle/: calc.rs  cli.yml  mod.rs
