[package]
name = "algorithm_rs"
version = "1.1.0"
authors = ["Toshiki <bushy.trivial.0o@icloud.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.6"
env_logger = "0.10.0"
log = "0.4.17"
