[package]
name = "algorithm_rs"
version = "1.1.0"
authors = ["Toshiki <bushy.trivial.0o@icloud.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
